carta random con botones yey

--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Hello Rigo with Vanilla.js</title>
     <link
+      href="https://fonts.googleapis.com/css2?family=Orelega+One&display=swap"
+      rel="stylesheet"
+    />
+    <link
       rel="stylesheet"
       href="https://use.fontawesome.com/releases/v5.2.0/css/all.css"
       integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ"
@@ -14,15 +18,42 @@
   </head>
   <body>
     <div class="container-fluid text-center">
-      <h1 class="mt-5">Hello Rigo!</h1>
-      <img src="./rigo-baby.jpg" />
-      <p class="alert alert-warning mt-4">
-        If this text is <b>not</b> centered and <b>yellow</b>, you probably have
-        an error
-      </p>
-      <div class="fixed-bottom p-4">
-        Made with ❤️ by
-        <a href="https://www.4geeksacademy.com">4Geeks Academy</a>
+      <div class="row mx-auto flex-wrap">
+        <div class="d-flex justify-content-center mt-4">
+          <!-- NAIPE starto-->
+          <div class="p-3 m-2 border border-success rounded-3 card">
+            <div class="topSymbol"></div>
+            <div class="num">0</div>
+            <div class="bottomSymbol"></div>
+          </div>
+          <!-- NAIPE end -->
+        </div>
+      </div>
+      <div class="d-row mx-auto w-25 minw">
+        <button id="generateButton" class="btn btn-light w-100 rounded-0"><strong>CHANGE CARD</strong></button>
+      </div>
+      <div class="d-row mx-auto w-25 mt-1 minw">
+          
+          <div class="input-group input-group-sm">
+            <label for="widthInput" class="input-group-text border-0 rounded-0"
+              ><small>width + px</small></label
+            >
+            <input
+              type="text"
+              id="widthInput"
+              class="form-control border-0 rounded-0"
+            />
+            <label for="heightInput" class="input-group-text border-0 rounded-0"
+              ><small>height + px</small></label
+            >
+            <input
+              type="text"
+              id="heightInput"
+              class="form-control border-0 rounded-0"
+            />
+          </div>
+          <button id="resetButton" class="btn btn-dark w-100 rounded-0"><strong>RESET CARD</strong></button>
+        </div>
       </div>
     </div>
   </body>
