--- a/src/index.html
+++ b/src/index.html
@@ -36,7 +36,7 @@
           
           <div class="input-group input-group-sm">
             <label for="widthInput" class="input-group-text border-0 rounded-0"
-              ><small>width + px</small></label
+              ><small>width</small></label
             >
             <input
               type="text"
@@ -44,7 +44,7 @@
               class="form-control border-0 rounded-0"
             />
             <label for="heightInput" class="input-group-text border-0 rounded-0"
-              ><small>height + px</small></label
+              ><small>height</small></label
             >
             <input
               type="text"
